--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Search Engine World's Countries - By Shlomy Gerstner</title>
     <link rel="stylesheet" href="style.css">
-    <link href='https://fonts.googleapis.com/css?family=Aclonica' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
@@ -21,6 +20,7 @@
         </div>
         <div id="countryContainer">
 
+        </div>
         </div>
     
 <script src="./app.js"></script>
