--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-    <h1>Search Engine World's Countries - By Shlomy Gerstner</h1>
+    <h1 style=" font-family: 'Quicksand', sans-serif;">Search Engine World's Countries - By Shlomy Gerstner</h1>
     <div id="bodyContainer">
         <div id="searchContainer">
             <input class="w3-input w3-border" id="search" type="search" placeholder="Search Country" style="width: 50%; font-size: larger; font-family: 'Quicksand', sans-serif;">
@@ -19,6 +19,7 @@
             <button class="w3-btn w3-blue" id="getAllBtn" style=" font-size: larger; font-family: 'Quicksand', sans-serif;">Get All</button>
         </div>
     </div>
+    <div id="messegeArea" ></div>
         <div id="countryContainer">
             
         </div>
